test/testdata/functions/builtin/parse_number_invalid_string_error.lox
parseNumber("foo bar"); // error: "foo bar" could not be parsed as a 'number'
